# logseq

./: .cljfmt.edn  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .i18n-lint.toml  .lintstagedrc  .nowignore  .npmrc  .prettierrc.js  .projectile  .stylelintrc.json  .yarnrc.yml  AGENTS.md  CODEBASE_OVERVIEW.MD  CODEBASE_OVERVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.exporter  Dockerfile.local  LICENSE.md  README.md  READMEcn.md  SECURITY.md  Shamildhr7ejr  app.sh  bb.edn  build.gradle.kts  build.sh  capacitor.config.json  capacitor.config.ts  checksum.md  clojure.bat  content-includes-journal-pages  cypress.json  deploy.sh  deploy_cdn.sh  (+47 more)
.carve/: config.edn  ignore
.clj-kondo/: config.edn
.github/: FUNDING.yml  pr-labeler.yml  release.yml  stale-issues.yml
.lsp/: config.edn
amplify/: package.json
android/: .gitignore  README.md  build.gradle  capacitor.settings.gradle  gradle.properties  keystore.properties.example  settings.gradle  variables.gradle
api/: .gitignore  index.js  package-lock.json  package.json  shadow-cljs.edn
backend/: CHANGELOG.md  README.md  project.clj
cli/: .ocamlformat  AGENTS.md  agents.md  dune  dune-project  logseq-cli.opam  logseq-cli.opam.template  package-lock.json  package.json  pnpm-lock.yaml  vite.config.mjs
cli-e2e/: AGENTS.md  README.md  bb.edn
cli/lib/: add.ml  agent.ml  auth_command.ml  auth_state.ml  block.ml  cli.ml  cli_action.ml  cli_config.ml  cli_effect.ml  cli_parse.ml  cli_primitive.ml  cli_request.ml  cli_result.ml  cli_unix.ml  cmdliner_boundary.ml  cmdliner_terms.ml  command_id.ml  command_registry.ml  common_cli_types.ml  completion.ml  db_worker_types.ml  debug.ml  display_width.ml  doctor.ml  dune  edn_util.ml  entity.ml  error.ml  example.ml  format_types.ml  global_opts.ml  graph.ml  graph_dir.ml  humanize_types.ml  id_parse.ml  js_bytecode_stubs.c  json_util.ml  list_command.ml  log_types.ml  output.ml  (+26 more)
cli/lib/platform/native/: cli_effect.ml  cli_platform.ml  dune
cli/lib/platform/node/: cli_effect.ml  cli_platform.ml  cli_unix.ml  dune
cli/spec/: README.md  dune
cli/spec/cli/: cli.mli  cli_action.mli  cli_config.mli  cli_request.mli  cli_result.mli  cmdliner_boundary.mli  cmdliner_terms.mli  command_id.mli  command_registry.mli  command_spec.mli  global_opts.mli
cli/spec/commands/: agent.mli  auth_command.mli  completion.mli  debug.mli  doctor.mli  example.mli  graph.mli  list_command.mli  query.mli  remove.mli  search.mli  server_command.mli  show.mli  skill.mli  sync.mli  upsert.mli
cli/spec/core/: cli_effect.mli  cli_primitive.mli  error.mli  output.mli  time.mli  ustring.mli
cli/spec/domain/: block.mli  entity.mli  graph_types.mli  id_parse.mli  property.mli  selector.mli  task_status.mli
cli/spec/formatting/: common_cli_types.mli  db_worker_types.mli  humanize_types.mli  log_types.mli  pretty_print.mli  profile_types.mli  root_dir_types.mli  style_types.mli  tree_text_types.mli  uuid_refs_types.mli
cli/spec/platform/: cli_effect.mli  cli_platform.mli  cli_unix.mli
cli/spec/runtime/: auth_state.mli  server_runtime.mli  transport.mli
cli/test/: cli_parity_test_cases.ml  cli_unix_native_test.ml  dune  fake_codex.ml  human_output_test.ml  js_node_http_uses_fetch_without_xhr.js  melange_smoke.js  test_cases.ml  test_logseq_cli.ml  test_support.ml  wasm_agent_bridge_codex_lifecycle.js  wasm_fetch_timeout.js  wasm_graph_backup.js  wasm_graph_info.js  wasm_graph_unicode_name.js  wasm_list_asset_human_columns.js  wasm_list_page_human_ragged.js  wasm_list_page_human_time.js  wasm_login.js  wasm_show_human_properties.js  wasm_show_human_tree.js  wasm_sync_download_require_graph.js  wasm_sync_progress.js  wasm_sync_progress_disconnect.js  wasm_sync_progress_stream.js  wasm_upsert_asset.js
clj-e2e/: .cljfmt.edn  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  bb.edn  build.clj  deps.edn
dev/: user.clj
docs/: Build LogSeq Desktop for windows on Ubuntu.md  Code_of_Conduct.md  Develop LogSeq on Windows.md  accessibility.md  android-0.11-plan.md  contributing-to-translations.md  dev-practices.md  dev-setup-guide.md  develop-logseq-on-mobile.md  develop-logseq-on-windows.md  develop-logseq.md  docker-web-app-guide.md  i18n-key-naming.md  issue-labels.md  logseq-dependencies-windows.md  logseq-markdown-syntax.md  mobile.md  og_import_graph_cases.md  plugin-system.md  recurring-tasks.md  refactor_remove_ui_db.md  self-hosted-sync.md
e2e-tests/: README.md  accessibility.spec.ts  basic.spec.ts  basic.with-diacritics.spec.ts  blockref.spec.ts  code-editing.spec.ts  context-menu.spec.ts  dnd.spec.ts  editor-random.spec.ts  editor.spec.ts  file-sync.spec.ts  fixtures.ts  flashcards.spec.ts  fs.spec.ts  headings.spec.ts  history.spec.ts  hotkey.spec.ts  logseq-api.spec.ts  logseq-url.spec.ts  logseq_url.spec.ts  package.json  page-alias.spec.ts  page-refs.spec.ts  page-rename.spec.ts  page-search.spec.ts  paste.spec.ts  plugins.spec.ts  random.spec.ts  sanitization.spec.ts  sidebar.spec.ts  srs_test.cljs  test_runner.cljs  types.ts  utils.ts  video.spec.ts  whiteboards.spec.ts  window.spec.ts
externs/: app.txt  mobile.txt
frontend/: deps.edn  package.json  shadow-cljs.edn
ios/: .gitignore  README.md
kmp/: README.md  build.gradle.kts  gradle.properties
libs/: .npmignore  .prettierrc.js  CHANGELOG.md  README.md  SKILL.md  babel.config.json  index.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  webpack.config.core.js  webpack.config.js
nbb-e2e/: bb.edn  nbb.edn  package.json
prompts/: clojure_errors.md  lessons.md  review.md  todo.md
(+2963 files in other folders)
