(lang dune 3.23)

(name logseq-cli)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name logseq-cli)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml cmdliner lwt transit edn_ocaml humanize ptime cohttp cohttp-lwt cohttp-lwt-unix uri alcotest js_of_ocaml js_of_ocaml-lwt js_of_ocaml-compiler)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
