(lang dune 3.23)

(using melange 1.0)

(name logseq-cli)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name logseq-cli)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml melange melange-fetch melange-transit melange-edn melange-fest humanize)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
