(include_subdirs unqualified)

(library
 (name logseq_cli_platform)
 (wrapped false)
 (libraries lwt ptime cohttp cohttp-lwt uri)
 (modules Cli_effect Cli_platform)
 (virtual_modules Cli_effect Cli_platform))

(library
 (name logseq_cli_spec)
 (wrapped false)
 (libraries
  cmdliner
  lwt
  edn_ocaml
  ptime
  cohttp
  cohttp-lwt
  uri
  logseq_cli_platform)
 (modules
  (:standard \ Cli_effect Cli_platform))
 (modules_without_implementation Command_spec)
 (virtual_modules
  ; core
  Cli_primitive
  Error
  Output
  ; domain
  Selector
  Property
  Entity
  Block
  Id_parse
  Task_status
  Graph_types
  ; runtime
  Transport
  Server_runtime
  Auth_state
  ; formatting
  Profile_types
  Log_types
  Style_types
  Humanize_types
  Root_dir_types
  Uuid_refs_types
  Tree_text_types
  Db_worker_types
  Common_cli_types
  ; cli
  Global_opts
  Cli_config
  Cli_result
  Cli_request
  Cli_action
  Cli
  Cmdliner_boundary
  Cmdliner_terms
  Command_id
  Command_registry
  ; commands
  Graph
  List_command
  Upsert
  Remove
  Search
  Query
  Show
  Server_command
  Sync
  Auth_command
  Agent
  Doctor
  Debug
  Skill
  Completion
  Example))
